--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -4,8 +4,14 @@
     <title>{{title}}</title>
     <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
     <link rel='stylesheet' href='/public/stylesheets/style.css' />
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../public/css/form.css">
   </head>
   <body>
+    {{> banner}}
+    {{> nav}}
     {{{body}}}
   </body>
 </html>
