--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -9,19 +9,19 @@
                 <header class="reg-header">
                     <h1>Registration Form</h1>
                 </header>
-                <form>
+                <form method="POST" action="/users/register" enctype="application/x-www-form-urlencoded">
                     <div class="grid-reg-container">
                         <label id="reg-user" class="site-information">Username</label>
-                        <input type="text" placeholder=" Username" id="reg-user-input" class="reg-information-input" required/>
+                        <input type="text" name="username" placeholder=" Username" id="reg-user-input" class="reg-information-input" required/>
 
                         <label id="email" class="site-information">Email</label>
-                        <input type="email" placeholder=" Email" id="email-input" class="reg-information-input" required/>
+                        <input type="email" name="email" placeholder=" Email" id="email-input" class="reg-information-input" required/>
 
                         <label id="reg-password" class="site-information">Password</label>
-                        <input type="password" placeholder=" Password" id="reg-pass-input" class="reg-information-input" required/>
+                        <input type="password" name="password" placeholder=" Password" id="reg-pass-input" class="reg-information-input" required/>
 
                         <label id="confirm-pass" class="site-information">Confirm Password</label>
-                        <input type="password" placeholder=" Confirm Password" id="confirm-pass-input" class="reg-information-input" required/>
+                        <input type="password" name="cpassword" placeholder=" Confirm Password" id="confirm-pass-input" class="reg-information-input" required/>
 
                         <div id="checkboxes">
                             <input type="checkbox" class="checkbox" required/>
