completed login milestone 3

--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -10,7 +10,12 @@
         <nav>
             <ul>
                 <li><a href="/post_image" class="option">Post Image</a></li>
-                <li><a href="/login" class="option">Log In</a></li>
+
+                {{#if logged}}
+                    <li><a href="/users/logout" class="option" id="logging-button">Log Out</a></li>
+                {{else}}
+                    <li><a href="/login" class="option" id="logging-button">Log In</a></li>
+                {{/if}}
             </ul>
         </nav>
     </div>
