--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -6,13 +6,13 @@
                 <header class="log-header">
                     <h1>Login Form</h1>
                 </header>
-                <form>
+                <form method="POST" action="/users/login" enctype="application/x-www-form-urlencoded">
                     <div class="grid-login-container">
                         <label id="log-user" class="site-information">Username</label>
-                        <input type="text" placeholder=" Username" id="log-user-input" class="log-information-input" required/>
+                        <input type="text" name="username" placeholder=" Username" id="log-user-input" class="log-information-input" required/>
 
                         <label id="log-password" class="site-information">Password</label>
-                        <input type="password" placeholder=" Password" id="log-pass-input" class="log-information-input" required/>
+                        <input type="password" name="password" placeholder=" Password" id="log-pass-input" class="log-information-input" required/>
 
                         <button type="submit" id="log-submit" class="site-submit">Submit</button>
                         <button type="reset" id="log-cancel" class="site-cancel">Cancel</button>
