completed logout milestone 3

--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -12,9 +12,9 @@
                 <li><a href="/post_image" class="option">Post Image</a></li>
 
                 {{#if logged}}
-                    <li><a href="/users/logout" class="option" id="logging-button">Log Out</a></li>
+                    <li><a href="/users/logout" class="option" id="logout-button">Log Out</a></li>
                 {{else}}
-                    <li><a href="/login" class="option" id="logging-button">Log In</a></li>
+                    <li><a href="/login" class="option" id="login-button">Log In</a></li>
                 {{/if}}
             </ul>
         </nav>
