--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -13,5 +13,21 @@
     {{> banner}}
     {{> nav}}
     {{{body}}}
+
+    {{#if logged}}
+        <script>
+            let ele = document.getElementById("logout-button");
+            if (ele) {
+                ele.onclick = (even) => {
+                    fetch('users/logout', {
+                        method: "POST"
+                    })
+                    .then((data) => {
+                      location.replace('/');
+                    })
+                }
+            }
+        </script>
+    {{/if}}
   </body>
 </html>
