--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -4,7 +4,7 @@
             <img id="home-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Kingdom_Hearts_logo.svg/1200px-Kingdom_Hearts_logo.svg.png">
         </a>
         <label class="search">
-            <input type="text" class="search-input" placeholder="  Search photo">
+            <input type="text" id="search-photo" class="search-input" placeholder="  Search photo">
             <button type="submit" class="site-submit">Search</button>
         </label>
         <nav>
