--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
-    <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
-    <link rel='stylesheet' href='/public/stylesheets/style.css' />
+      <title>{{title}}</title>
+      <link rel="stylesheet" type="text/css" href="../public/css/bootstrap-alert.css">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../public/css/form.css">
+      <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
+      <link rel='stylesheet' href='/public/stylesheets/style.css' />
+
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="../public/css/form.css">
+      <script defer type="text/javascript" src="../public/js/frontEnd.js"></script>
   </head>
   <body>
     {{> banner}}
     {{> nav}}
+    {{#if (emptyObject messages)}}
+        {{> flashmessage}}
+    {{/if}}
     {{{body}}}
 
     {{#if logged}}
