began milestone 4 and am currently show recent posts on home page

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 </html>
+<body>
+    <div id="main-content">
+        {{#each results}}
+            {{> card this}}
+        {{/each}}
+    </div>
+</body>
