--- a/application/public/css/form.css
+++ b/application/public/css/form.css
@@ -39,6 +39,16 @@ body {
     margin-top: 5px;
 }
 
+#main-content {
+    grid-area: content;
+    padding-top: 0.35rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+}
+
 nav {
     float: right;
 }
