--- a/application/views/imagepost.hbs
+++ b/application/views/imagepost.hbs
@@ -4,11 +4,12 @@
             <div class="grid-image-container">
                 <div class="post-information">
                     <div class="post-details">
-                        <h2 id="post-title" class="post-detail">Post Title</h2>
-                        <h3 id="author" class="post-detail">_-__-_-___-  Post Author  -___-_-__-_</h3>
-                        <h4 id="time" class="post-detail">Post Creation Time</h4>
+                        <h2 id="post-title" class="post-detail">{{currentPost.title}}</h2>
+                        <h3 id="author" class="post-detail">{{currentPost.description}}</h3>
+                        <h3 id="author" class="post-detail">_-__-_-___-  {{currentPost.username}}  -___-_-__-_</h3>
+                        <h4 id="time" class="post-detail">{{currentPost.created}}</h4>
                     </div>
-                    <img src="https://fakeimg.pl/300/" id="fake-image">
+                    <img src="/{{currentPost.photopath}}" id="fake-image">
                 </div>
             </div>
     </body>
