--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -2,7 +2,7 @@
     <img class="card-image" src="{{thumbnail}}" alt="missing image">
     <div class="card-body">
         <p class="card-title">{{title}}</p>
-        <p class=card-text">{{description}}</p>
+        <p class="card-text">{{description}}</p>
         <a href="/post/{{id}}" class="anchor-buttons">Post Details</a>
     </div>
 </div>
