--- a/application/public/css/bootstrap-alert.css
+++ b/application/public/css/bootstrap-alert.css
@@ -1,8 +1,12 @@
 .alert {
+    position: absolute;
+    right: 5%;
     padding: 15px;
+    margin-top: 3px;
     margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 4px;
+    z-index: 9999;
 }
 
 .alert .alert-link {
