--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -4,6 +4,8 @@
       <title>{{title}}</title>
       <link rel="stylesheet" type="text/css" href="../public/css/bootstrap-alert.css">
 
+      <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+
       <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
       <link rel='stylesheet' href='/public/stylesheets/style.css' />
 
