--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -9,7 +9,7 @@
         </label>
         <nav>
             <ul>
-                <li><a href="/post_image" class="option">Post Image</a></li>
+                <li id="post-button"><a href="/post_image" class="option">Post Image</a></li>
 
                 {{#if logged}}
                     <li><a href="/users/logout" class="option" id="logout-button">Log Out</a></li>
