fixed flash message when searching for an image

--- a/application/public/css/bootstrap-alert.css
+++ b/application/public/css/bootstrap-alert.css
@@ -1,3 +1,15 @@
+#flash-message {
+    position: fixed;
+    top: 183px;
+    right: -0.25%;
+    margin-top: 3px;
+    margin-bottom: 20px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    z-index: 99999;
+}
+
 .alert {
     position: absolute;
     right: 5%;
