--- a/application/views/imagepost.hbs
+++ b/application/views/imagepost.hbs
@@ -6,7 +6,7 @@
                 <div class="post-information">
                     <div class="post-details">
                         <h2 id="post-title" class="post-detail">{{currentPost.title}}</h2>
-                        <h3 id="description" class="post-detail">{{currentPost.description}}</h3>
+                        <h3 id="post-description" class="post-detail">{{currentPost.description}}</h3>
                         <h3 id="author" class="post-detail">{{currentPost.username}}</h3>
                         <h4 id="time" class="post-detail">{{currentPost.created}}</h4>
                     </div>
