--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -27,7 +27,7 @@
             let ele = document.getElementById("logout-button");
             if (ele) {
                 ele.onclick = (even) => {
-                    fetch('users/logout', {
+                    fetch('/users/logout', {
                         method: "POST"
                     })
                     .then((data) => {
